--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,10 @@
+@font-face{
+  font-family: 'Crafty Girls';
+  src: url('./CraftyGirls-Regular.ttf');
+}
+
 .hello {
+  font-family: 'Crafty Girls', cursive;
   color: red;
+  background: url('./example.jpg');
 }
