--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,10 +8,10 @@
   src: url('../assets/fonts/Discoteque-St.ttf');
 }
 
-.hello {
+.home-title {
   font-family: 'Crafty Girls', cursive;
-  color: red;
-  background: url('../assets/img/loge.jpg');
+  font-weight: 800;
+  color: orange;
 }
 
 .logo {
@@ -22,4 +22,32 @@
 .logo-img {
   height: 30px;
   width: auto;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background-color: #f5f5f5;
+}
+
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+
+.page {
+  padding: 60px;
 }
